--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ body {
     perspective: 20em;
     perspective-origin: 
     50% calc(50% - 4em);
+    font-family: "Jersey 10";
+    letter-spacing: 2px;
 }
 header {
   position: fixed;
@@ -21,9 +23,9 @@ header {
 }
 header h1 {
   text-align: center;
-  font-size: .65em;
+  font-size: .85em;
   font-weight: bold;
-  margin-top: 1em;
+  margin: auto;
   
 }
 header h1 span:nth-child(1) {
@@ -174,4 +176,13 @@ header h1 span:nth-child(11) {
 }
 .b9 {
     border-radius: 25% 15% 15% 15%;
+}
+footer {
+    position: fixed;
+    bottom: 0;
+    text-align: center;
+    font-size: .125em;
+    font-weight: bold;
+    margin-bottom: 1em;
+    color: white;
 }
